objects/QCIssue__c.object
<CustomObject>
    <description>Salesforce Issue fetched from the Quality Clouds API</description>
    <fields>
        <fullName>Baseline__c</fullName>
        <label>Baseline</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <description>User Id who created the affected element</description>
        <inlineHelpText>User Id who created the affected element</inlineHelpText>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <description>Date on which the affected element was created</description>
        <inlineHelpText>Date on which the affected element was created</inlineHelpText>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Documentation__c</fullName>
        <description>Documentation URL</description>
        <inlineHelpText>Documentation URL</inlineHelpText>
        <label>Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Element_Name__c</fullName>
        <description>Name of the affected element</description>
        <inlineHelpText>Name of the affected element</inlineHelpText>
        <label>Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Element_Type__c</fullName>
        <description>Type of the affected element</description>
        <inlineHelpText>Type of the affected element</inlineHelpText>
        <label>Element Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID</inlineHelpText>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impact_Area__c</fullName>
        <description>Impact Area</description>
        <inlineHelpText>Impact Area</inlineHelpText>
        <label>Impact Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCALABILITY</fullName>
                </value>
                <value>
                    <fullName>PERFORMANCE</fullName>
                </value>
                <value>
                    <fullName>MANAGEABILITY</fullName>
                </value>
                <value>
                    <fullName>SECURITY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue__c</fullName>
        <description>Issue Type</description>
        <inlineHelpText>Issue Type</inlineHelpText>
        <label>Issue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line number where the issue was detected</description>
        <inlineHelpText>Line number where the issue was detected</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Link from Quality Clouds API</description>
        <inlineHelpText>Link from Quality Clouds API</inlineHelpText>
        <label>Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Element__c</fullName>
        <description>Go to Element</description>
        <inlineHelpText>Go to Element</inlineHelpText>
        <label>Link to Element</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Scan__c</fullName>
        <description>Scan the issue is part of</description>
        <inlineHelpText>Scan the issue is part of</inlineHelpText>
        <label>Scan</label>
        <referenceTo>Scann__c</referenceTo>
        <relationshipLabel>QCIssues</relationshipLabel>
        <relationshipName>QCIssues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity</description>
        <inlineHelpText>Severity</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HIGH</fullName>
                </value>
                <value>
                    <fullName>MEDIUM</fullName>
                </value>
                <value>
                    <fullName>LOW</fullName>
                </value>
                <value>
                    <fullName>WARNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <description>User Id who last updated the affected element</description>
        <inlineHelpText>User Id who last updated the affected element</inlineHelpText>
        <label>Updated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Updated_On__c</fullName>
        <description>Date on which the affected element was last updated</description>
        <inlineHelpText>Date on which the affected element was last updated</inlineHelpText>
        <label>Updated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Write_Off_Request_Description__c</fullName>
        <description>Write Off Request Description</description>
        <inlineHelpText>Write Off Request Description</inlineHelpText>
        <label>Write Off Request Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Request_Reason__c</fullName>
        <label>Write Off Request Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reason1</fullName>
                    <label>Complex solution, requires refactoring</label>
                </value>
                <value>
                    <fullName>Reason2</fullName>
                    <label>Insufficient time to fix and test</label>
                </value>
                <value>
                    <fullName>Reason3</fullName>
                    <label>Complex to test and validate all situations</label>
                </value>
                <value>
                    <fullName>Reason4</fullName>
                    <label>False positive rule</label>
                </value>
                <value>
                    <fullName>Reason5</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>Reason6</fullName>
                    <label>Legacy issue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Write_Off_Requested_Date__c</fullName>
        <description>Date/time of write off request.</description>
        <inlineHelpText>Date/time of write off request.</inlineHelpText>
        <label>Write Off Requested Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Write_Off_Requester__c</fullName>
        <description>User who requested write off</description>
        <inlineHelpText>User who requested write off</inlineHelpText>
        <label>Write Off Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Status__c</fullName>
        <label>Write Off Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Validation_Date__c</fullName>
        <label>Write Off Validation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Write_Off_Validation_Reason__c</fullName>
        <label>Write Off Validation Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Validator__c</fullName>
        <label>Write Off Validator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_off__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Write off</description>
        <inlineHelpText>Write off</inlineHelpText>
        <label>Write off</label>
        <type>Checkbox</type>
    </fields>
    <label>QCIssue</label>
    <nameField>
        <label>QCIssue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QCIssues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>